gitops/apps/report-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-service
  namespace: report-service
  labels:
    app: report-service
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-service
  template:
    metadata:
      labels:
        app: report-service
        tier: backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: report-service
          image: 987168675043.dkr.ecr.us-east-1.amazonaws.com/solidarytech/report-service:0f8d97004a33be0c5e9d5dbb195bf73ec587fbda
          imagePullPolicy: Always
          ports:
            - containerPort: 8005
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          livenessProbe:
            tcpSocket:
              port: 8005
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8005
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
