gitops/apps/report-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: report-service
  namespace: report-service
spec:
  type: ClusterIP
  selector:
    app: report-service
  ports:
    - port: 8005
      targetPort: 8005
      protocol: TCP
