gitops/apps/report-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: report-service-ingress
  namespace: report-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /report-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: report-service
                port:
                  number: 8005
